fixed the hamburger so it works on mobile

--- a/client/public/main.css
+++ b/client/public/main.css
@@ -156,15 +156,8 @@ section .section-title {
       font-size: 9px;
   }
 }
-  @media (max-width:850px) {
-    .navbar{
-        font-size: 7px;
-    }
-    .topOfLink {
-        margin-top: 14px;
-    }
-}
-@media (max-width:767px) {
+  
+@media (max-width:992px) {
   .navbar{
       font-size: 14px;
       height: auto;
